adding logo navigation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <script src="js/scripts.js"></script>
 </head>
 <body>
-    
+    <div class="container-fluid">
+
+        <div class="row logo">
+            <div class="col-md-12">
+                <h1>PIP PIZZA</h1>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
