--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Anton|Dancing+Script|Fredoka+One|Luckiest+Guy|Monoton&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container-fluid">
 
         <div class="row logo">
             <div class="col-md-12">
-                <h1>PIP PIZZA</h1>
+                <h1 class="display-4">PIP PIZZA</h1>
             </div>
         </div>
     </div>
