--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="container-fluid">
 
         <div class="row logo">
-            <div class="col-md-12">
-                <h1 class="display-4">PIP PIZZA</h1>
+            <div class="col-md-12 navbar-fixed-top">
+                <h1 class="display-6">PIP PIZZA</h1>
             </div>
         </div>
     </div>
