--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
                 <h1 class="display-6">PIP PIZZA</h1>
             </div>
         </div>
+
+        <div class="row background">
+
+        </div>
+
+        <div class="row moto">
+
+        </div>
     </div>
 </body>
 </html>
