adding company moto

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         </div>
 
         <div class="row moto">
-
+            <div class="col-md-12">
+                <h2 id="m1">Pip Pizza.</h2>
+                <h4 id="m2">&nbsp best pizza, best value</h4>
+            </div>
         </div>
     </div>
 </body>
