adding functions to my pizza size fields

--- a/index.html
+++ b/index.html
@@ -32,10 +32,29 @@
         </div>
 
         <div class="row selection_form">
+
             <div class="col-md-12">
                 <h3>Fill in your order here.</h3>
-                <h6><small id="emailHelp" class="form-text text-muted">Select preferable taste of your pizza.</small></h6>
+                <h6><small class="form-text text-muted">Select preferable taste of your pizza.</small></h6>
+                <br><br>
+                <form action="">
+                    <h4>Size.</h4>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input check_size" type="radio" name="size" id="inlineRadio1" value="small">
+                        <label class="form-check-label" for="inlineRadio1">Small</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input check_size" type="radio" name="size" id="inlineRadio2" value="medium">
+                        <label class="form-check-label" for="inlineRadio2">Medium</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input check_size" type="radio" name="size" id="inlineRadio3" value="large">
+                        <label class="form-check-label" for="inlineRadio3">Large</label>
+                      </div>
+                </form>
+                
             </div>
+
         </div>
     </div>
 </body>
