--- a/index.html
+++ b/index.html
@@ -41,15 +41,21 @@
                     <h4>Size.</h4>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input check_size" type="radio" name="size" id="inlineRadio1" value="small">
-                        <label class="form-check-label" for="inlineRadio1">Small</label>
+                        <label class="form-check-label" for="inlineRadio1">Small <br>
+                            <small class="form-text text-muted">KCS: 250.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
                         <input class="form-check-input check_size" type="radio" name="size" id="inlineRadio2" value="medium">
-                        <label class="form-check-label" for="inlineRadio2">Medium</label>
+                        <label class="form-check-label" for="inlineRadio2">Medium <br>
+                            <small class="form-text text-muted">KCS: 500.</small>
+                        </label><br>
                       </div>
                       <div class="form-check form-check-inline">
                         <input class="form-check-input check_size" type="radio" name="size" id="inlineRadio3" value="large">
-                        <label class="form-check-label" for="inlineRadio3">Large</label>
+                        <label class="form-check-label" for="inlineRadio3">Large <br>
+                            <small class="form-text text-muted">KCS: 1000.</small>
+                        </label><br>
                       </div>
                 </form>
                 
