adding crust add

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 <h6><small class="form-text text-muted">Select preferable taste of your pizza.</small></h6>
                 <br><br>
                 <form action="">
+
+
+
                     <h4>Size.</h4>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input check_size" type="radio" name="size" id="inlineRadio1" value="small">
@@ -56,6 +59,34 @@
                         <label class="form-check-label" for="inlineRadio3">Large <br>
                             <small class="form-text text-muted">KCS: 1000.</small>
                         </label><br>
+                      </div>
+
+
+
+                      <h4>Crust.</h4>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" name="crust" id="inlineCheckbox1" value="thin">
+                        <label class="form-check-label" for="inlineCheckbox1">Thin.</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" name="crust" id="inlineCheckbox2" value="thick">
+                        <label class="form-check-label" for="inlineCheckbox2">Thick.</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" name="crust" id="inlineCheckbox3" value="stuffed">
+                        <label class="form-check-label" for="inlineCheckbox3">Stuffed.</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" name="crust" id="inlineCheckbox1" value="crispy">
+                        <label class="form-check-label" for="inlineCheckbox1">Crispy.</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" name="crust" id="inlineCheckbox2" value="cheese">
+                        <label class="form-check-label" for="inlineCheckbox2">Cheese Filled.</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" name="crust" id="inlineCheckbox3" value="gluten">
+                        <label class="form-check-label" for="inlineCheckbox3">Gluten-free.</label>
                       </div>
                 </form>
                 
