adding js and jquery to crust

--- a/index.html
+++ b/index.html
@@ -65,28 +65,40 @@
 
                       <h4>Crust.</h4>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" name="crust" id="inlineCheckbox1" value="thin">
-                        <label class="form-check-label" for="inlineCheckbox1">Thin.</label>
+                        <input class="form-check-input check_crust" type="radio" name="crust" id="inlineCheckbox1" value="thin">
+                        <label class="form-check-label" for="inlineCheckbox1">Thin. <br>
+                            <small class="form-text text-muted">KCS: +12.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" name="crust" id="inlineCheckbox2" value="thick">
-                        <label class="form-check-label" for="inlineCheckbox2">Thick.</label>
+                        <input class="form-check-input check_crust" type="radio" name="crust" id="inlineCheckbox2" value="thick">
+                        <label class="form-check-label" for="inlineCheckbox2">Thick. <br>
+                            <small class="form-text text-muted">KCS: +30.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" name="crust" id="inlineCheckbox3" value="stuffed">
-                        <label class="form-check-label" for="inlineCheckbox3">Stuffed.</label>
+                        <input class="form-check-input check_crust" type="radio" name="crust" id="inlineCheckbox3" value="stuffed">
+                        <label class="form-check-label" for="inlineCheckbox3">Stuffed. <br>
+                            <small class="form-text text-muted">KCS: +35.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" name="crust" id="inlineCheckbox1" value="crispy">
-                        <label class="form-check-label" for="inlineCheckbox1">Crispy.</label>
+                        <input class="form-check-input check_crust" type="radio" name="crust" id="inlineCheckbox4" value="crispy">
+                        <label class="form-check-label" for="inlineCheckbox4">Crispy. <br>
+                            <small class="form-text text-muted">KCS: +20.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" name="crust" id="inlineCheckbox2" value="cheese">
-                        <label class="form-check-label" for="inlineCheckbox2">Cheese Filled.</label>
+                        <input class="form-check-input check_crust" type="radio" name="crust" id="inlineCheckbox5" value="cheese">
+                        <label class="form-check-label" for="inlineCheckbox5">Cheese Filled. <br>
+                            <small class="form-text text-muted">KCS: +25.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" name="crust" id="inlineCheckbox3" value="gluten">
-                        <label class="form-check-label" for="inlineCheckbox3">Gluten-free.</label>
+                        <input class="form-check-input check_crust" type="radio" name="crust" id="inlineCheckbox6" value="gluten">
+                        <label class="form-check-label" for="inlineCheckbox6">Gluten-free. <br>
+                            <small class="form-text text-muted">KCS: +35.</small>
+                        </label>
                       </div>
                 </form>
                 
