adding toppings section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,50 @@
                             <small class="form-text text-muted">KCS: +35.</small>
                         </label>
                       </div>
+
+
+                      <h4>Toppings.</h4>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio4" value="option1">
+                        <label class="form-check-label" for="inlineRadio4">Pepperoni.</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio5" value="option2">
+                        <label class="form-check-label" for="inlineRadio5">Mushrooms.</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio6" value="option3">
+                        <label class="form-check-label" for="inlineRadio6">Onions.</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio7" value="option1">
+                        <label class="form-check-label" for="inlineRadio7">Sausage.</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio8" value="option2">
+                        <label class="form-check-label" for="inlineRadio8">Bacon.</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio9" value="option3">
+                        <label class="form-check-label" for="inlineRadio9">Extra cheese.</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio10" value="option1">
+                        <label class="form-check-label" for="inlineRadio1">Black olives.</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio11" value="option2">
+                        <label class="form-check-label" for="inlineRadio11">Pineapple.</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio12" value="option3">
+                        <label class="form-check-label" for="inlineRadio12">Green peppers.</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio13" value="option1">
+                        <label class="form-check-label" for="inlineRadio13">Spinach.</label>
+                      </div>
+                      
                 </form>
                 
             </div>
