starting topping js

--- a/index.html
+++ b/index.html
@@ -104,44 +104,64 @@
 
                       <h4>Toppings.</h4>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio4" value="option1">
-                        <label class="form-check-label" for="inlineRadio4">Pepperoni.</label>
+                        <input class="form-check-input check_topping" type="radio" name="topping" id="inlineRadio4" value="pepperoni">
+                        <label class="form-check-label" for="inlineRadio4">Pepperoni. <br>
+                            <small class="form-text text-muted">KCS: +100.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio5" value="option2">
-                        <label class="form-check-label" for="inlineRadio5">Mushrooms.</label>
+                        <input class="form-check-input check_topping" type="radio" name="topping" id="inlineRadio5" value="mushrooms">
+                        <label class="form-check-label" for="inlineRadio5">Mushrooms. <br>
+                            <small class="form-text text-muted">KCS: +75.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio6" value="option3">
-                        <label class="form-check-label" for="inlineRadio6">Onions.</label>
+                        <input class="form-check-input check_topping" type="radio" name="topping" id="inlineRadio6" value="onions">
+                        <label class="form-check-label" for="inlineRadio6">Onions. <br>
+                            <small class="form-text text-muted">KCS: +50.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio7" value="option1">
-                        <label class="form-check-label" for="inlineRadio7">Sausage.</label>
+                        <input class="form-check-input check_topping" type="radio" name="topping" id="inlineRadio7" value="sausage">
+                        <label class="form-check-label" for="inlineRadio7">Sausage. <br>
+                            <small class="form-text text-muted">KCS: +95.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio8" value="option2">
-                        <label class="form-check-label" for="inlineRadio8">Bacon.</label>
+                        <input class="form-check-input check_topping" type="radio" name="topping" id="inlineRadio8" value="bacon">
+                        <label class="form-check-label" for="inlineRadio8">Bacon. <br>
+                            <small class="form-text text-muted">KCS: +110.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio9" value="option3">
-                        <label class="form-check-label" for="inlineRadio9">Extra cheese.</label>
+                        <input class="form-check-input check_topping" type="radio" name="topping" id="inlineRadio9" value="extra_cheese">
+                        <label class="form-check-label" for="inlineRadio9">Extra cheese. <br>
+                            <small class="form-text text-muted">KCS: +50.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio10" value="option1">
-                        <label class="form-check-label" for="inlineRadio1">Black olives.</label>
+                        <input class="form-check-input check_topping" type="radio" name="topping" id="inlineRadio10" value="black_olives">
+                        <label class="form-check-label" for="inlineRadio10">Black olives. <br>
+                            <small class="form-text text-muted">KCS: +80.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio11" value="option2">
-                        <label class="form-check-label" for="inlineRadio11">Pineapple.</label>
+                        <input class="form-check-input check_topping" type="radio" name="topping" id="inlineRadio11" value="pineapple">
+                        <label class="form-check-label" for="inlineRadio11">Pineapple. <br>
+                            <small class="form-text text-muted">KCS: +75.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio12" value="option3">
-                        <label class="form-check-label" for="inlineRadio12">Green peppers.</label>
+                        <input class="form-check-input check_topping" type="radio" name="topping" id="inlineRadio12" value="green_peppers">
+                        <label class="form-check-label" for="inlineRadio12">Green peppers. <br>
+                            <small class="form-text text-muted">KCS: +65.</small>
+                        </label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="topping" id="inlineRadio13" value="option1">
-                        <label class="form-check-label" for="inlineRadio13">Spinach.</label>
+                        <input class="form-check-input check_topping" type="radio" name="topping" id="inlineRadio13" value="spinach">
+                        <label class="form-check-label" for="inlineRadio13">Spinach. <br>
+                            <small class="form-text text-muted">KCS: +60.</small>
+                        </label>
                       </div>
                       
                 </form>
