--- a/index.html
+++ b/index.html
@@ -170,11 +170,17 @@
 
 
                       <h4>How many would you like.</h4><br>
-                      <input class="col-md-3 pizza_number" type="number" value="1" min="0" max="10" />
+                      <input class="col-md-3 pizza_number" type="number" value="1" min="0" max="10" /><br>
+                      <button type="submit" class="btn btn-warning">Checkout.</button>
+
                 </form>
                 
             </div>
             
+        </div>
+
+        <div class="row contactus">
+
         </div>
     </div>
 </body>
