adding delivery section

--- a/index.html
+++ b/index.html
@@ -170,8 +170,11 @@
 
 
                       <h4>How many would you like.</h4><br>
-                      <input type="number" class="form-control col-md-4" id="pizza_number" value="1" min="1" max="10">
-                      <small class="form-text text-muted">Max: 10 Pizza's !</small><br><br>
+                      <input type="number" class="form-control col-md-4" id="pizza_number" value="1" min="1">
+                      <small class="form-text .text-muted text-danger">Note: Order responsibly!</small><br>
+
+
+                      <h4>Delivery.</h4>
                       <button class="btn btn-warning open" type="button">Checkout.</button>
                 </form>
                 
