adding delivery options

--- a/index.html
+++ b/index.html
@@ -172,10 +172,13 @@
                       <h4>How many would you like.</h4><br>
                       <input type="number" class="form-control col-md-4" id="pizza_number" value="1" min="1">
                       <small class="form-text .text-muted text-danger">Note: Order responsibly!</small><br>
-
+                      <button class="btn btn-warning open" type="button">confirm!</button><br><br>
 
                       <h4>Delivery.</h4>
-                      <button class="btn btn-warning open" type="button">Checkout.</button>
+                      <small class="form-text .text-muted ">Would you like to make a delivery.</small>
+                      <button type="button" class="btn btn-light">YES</button>
+                      <button type="button" class="btn btn-light">NO</button>
+                      <small class="form-text .text-muted text-danger">Note: Delivery will be KCS:500 and 200+ per km.!</small>
                 </form>
                 
             </div>
