making necessary changes on delivery

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                       <small class="form-text .text-muted text-danger">Note: Order responsibly!</small><br>
                       <button class="btn btn-warning open" type="button">confirm!</button><br><br>
 
-                      <h4>Delivery.</h4>
+                      <h4>Delivery & Checkout.</h4>
                       <small class="form-text .text-muted ">Would you like to make a delivery.</small>
                       <button type="button" class="btn btn-light" id="delivery_yes">YES</button>
                       <button type="button" class="btn btn-light" id="delivery_no" onclick="deliverN()">NO</button>
