adding contact us info

--- a/index.html
+++ b/index.html
@@ -186,7 +186,20 @@
         </div>
         
         <div class="row contact_us">
-          
+          <div class="col-md-12">
+            <h3 id="m2">CONTACT US.</h3>
+          </div>
+          <div class="col-md-12">
+            <a href="https://www.facebook.com/profile.php?id=100006079969163" class="btn" target="blank">
+						  <img src="images/icons8-facebook-50.png">
+            </a>
+					  <a href="https://wa.me/254758657828" class="btn" target="blank">
+						  <img src="images/icons8-whatsapp-50.png">
+					  </a>
+					  <a href="Tel: +254758657828" class="btn">
+						  <img src="images/icons8-phone-50 (1).png">
+					  </a>
+          </div>
         </div>
     </div>
 </body>
